--- a/Assignment 3 - Ensemble Learning/EnsembleLearning.ipynb
+++ b/Assignment 3 - Ensemble Learning/EnsembleLearning.ipynb
@@ -4,32 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "originalFeatures count 8\n",
-      "originalFeatures Index(['gender', 'race/ethnicity', 'parental_level_of_education', 'lunch',\n",
-      "       'test_preparation_course', 'math_score', 'reading_score',\n",
-      "       'writing_score'],\n",
-      "      dtype='object')\n",
-      "   gender race/ethnicity parental_level_of_education         lunch  \\\n",
-      "0    male        group A                 high school      standard   \n",
-      "1  female        group D            some high school  free/reduced   \n",
-      "2    male        group E                some college  free/reduced   \n",
-      "3    male        group B                 high school      standard   \n",
-      "4    male        group E          associate's degree      standard   \n",
-      "\n",
-      "  test_preparation_course  math_score  reading_score  writing_score  \n",
-      "0               completed          67             67             63  \n",
-      "1                    none          40             59             55  \n",
-      "2                    none          59             60             50  \n",
-      "3                    none          77             78             68  \n",
-      "4               completed          78             73             68  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -45,26 +20,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gender                         0\n",
-       "race/ethnicity                 0\n",
-       "parental_level_of_education    0\n",
-       "lunch                          0\n",
-       "test_preparation_course        0\n",
-       "math_score                     0\n",
-       "reading_score                  0\n",
-       "writing_score                  0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isnull().sum()"
    ]
@@ -73,103 +29,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>writing_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>1000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>66.396000</td>\n",
-       "      <td>69.002000</td>\n",
-       "      <td>67.738000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>15.402871</td>\n",
-       "      <td>14.737272</td>\n",
-       "      <td>15.600985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>27.000000</td>\n",
-       "      <td>23.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>56.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>58.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>66.500000</td>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>68.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>77.000000</td>\n",
-       "      <td>79.000000</td>\n",
-       "      <td>79.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        math_score  reading_score  writing_score\n",
-       "count  1000.000000    1000.000000    1000.000000\n",
-       "mean     66.396000      69.002000      67.738000\n",
-       "std      15.402871      14.737272      15.600985\n",
-       "min      13.000000      27.000000      23.000000\n",
-       "25%      56.000000      60.000000      58.000000\n",
-       "50%      66.500000      70.000000      68.000000\n",
-       "75%      77.000000      79.000000      79.000000\n",
-       "max     100.000000     100.000000     100.000000"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.describe()"
    ]
@@ -178,20 +38,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "none         665\n",
-       "completed    335\n",
-       "Name: test_preparation_course, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.test_preparation_course.value_counts()"
    ]
@@ -200,18 +47,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5037593984962406"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "335/665 #the data is slightly imbalanced but it's ok."
    ]
@@ -353,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.62, 0.66, 0.51, 0.54, 0.6 , 0.54, 0.52, 0.59, 0.49, 0.6 ])"
+       "array([0.62, 0.66, 0.51, 0.55, 0.63, 0.54, 0.52, 0.58, 0.49, 0.6 ])"
       ]
      },
      "execution_count": 13,
@@ -377,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "0.567"
+       "0.57"
       ]
      },
      "execution_count": 14,
@@ -446,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "0.567"
+       "0.57"
       ]
      },
      "execution_count": 17,
@@ -474,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "0.601"
+       "0.6050000000000001"
       ]
      },
      "execution_count": 18,
@@ -487,6 +323,30 @@
     "\n",
     "scores = cross_val_score(RandomForestClassifier(), X, y, cv = 10)\n",
     "scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "weak_learner = DecisionTreeClassifier(max_depth = 3)\n",
+    "clf = AdaBoostClassifier(base_estimator=weak_learner, n_estimators=100)\n",
+    "clf.fit(X_train, y_train)\n",
+    "predictions = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: \", accuracy)"
    ]
   }
  ],
